AUTOMAKE_OPTIONS=no-dependencies

bin_SCRIPTS=parocrun parocrun.globus parocexe paroc-user-env.csh paroc-user-env.sh
etc_SCRIPTS= paroc-user-env.csh paroc-user-env.sh paroc-runtime-env.in

etcdir=@prefix@/etc

sbin_SCRIPTS=paroc_script_setup paroc_setup 
script_DATA=SXXparoc.in SXXparoc.globus.in 

scriptdir=@sbindir@

EXTRA_DIST= SXXparoc.in SXXparoc.globus.in  paroc_script_setup.in parocrun.in parocrun.globus.in paroc_setup.in paroc-user-env.csh.in paroc-user-env.sh.in parocexe paroc-runtime-env.in.in

