cmake_minimum_required(VERSION 2.4)

SET(VERSION_MAJOR 1 CACHE INTERNAL "")
SET(VERSION_MINOR 1 CACHE INTERNAL "")
SET(VERSION_PATCH 1 CACHE INTERNAL "")

PROJECT(test-integer POPCPP)

SET(OBJECT_COMPILATION_FLAGS -object -o)
SET(MAIN_COMPILATION_FLAGS -o)
SET(OBJECT_MAP_FLAGS -listlong)

SET(OBJECT_OUTPUT integer.obj)
SET(OBJECT_MAP_FILE obj.map)

ADD_EXECUTABLE(integer.obj integer.ph integer.cc)

EXECUTE_PROCESS(COMMAND ${CMAKE_POPCPP_COMPILER} ${OBJECT_COMPILATION_FLAGS} ${OBJECT_OUTPUT} integer.ph integer.cc)
EXECUTE_PROCESS(COMMAND ${CMAKE_POPCPP_COMPILER} ${MAIN_COMPILATION_FLAGS} main integer.ph integer.cc main.cc)
EXECUTE_PROCESS(COMMAND ${OBJECT_OUTPUT} ${OBJECT_MAP_FLAGS} > ${OBJECT_MAP_FILE})






