#
# POP-C++ 
# Header installation process for static version
# 
# AUTHOR: Valentin Clement
# DATE: 2012/11/14
#

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/POPString.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/debug.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_accesspoint.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_allocobj.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_array.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_base.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_broker.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_broker_factory.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_factory.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_factory_finder.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_raw.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_raw_factory.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_utils.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_xdr.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_xdr_factory.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox_factory.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox_socket.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_event.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_exception.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_interface.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_list.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_memspool.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_mutex.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_object.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_od.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_string.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_sys.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_system.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_thread.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_utils.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_combox_mpi.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_connection_mpi.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_logger.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_objectcreator.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popfilestrip.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/priolist.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/sysinfodef.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/timer.h DESTINATION include/static)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popwayback.h DESTINATION include/static)
