#
# POP-C++ 
# Header installation process for pseudo-dynamic communication model 
# 
# AUTHOR: Valentin Clement
# DATE: 2012/11/14
#

set(POPCPP_INCLUDE_PATH include/static)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/POPString.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/debug.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_accesspoint.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_allocobj.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_array.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_base.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_broker.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_broker_factory.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_factory.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_factory_finder.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_raw.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_raw_factory.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_utils.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_xdr.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_xdr_factory.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox_factory.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox_socket.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_event.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_exception.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_interface.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_list.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_memspool.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_mutex.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_object.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_od.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_string.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_sys.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_system.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_thread.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_utils.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_combox_mpi.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_connection_mpi.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_logger.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_objectcreator.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/priolist.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/sysinfodef.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/timer.h DESTINATION ${POPCPP_INCLUDE_PATH})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popwayback.h DESTINATION ${POPCPP_INCLUDE_PATH})
